Remove /tmp symlink security concern
Users should set `export XDG_CACHE_HOME=~/cache` or something similar
locally to prevent extraneous warning messages.

This will "just work" with codeship per:

https://github.com/bbatsov/rubocop/blob/master/config/default.yml#L99

https://documentation.codeship.com/basic/builds-and-configuration/dependency-cache/#using-the-dependency-cache

After we set this value in the Codeship ENV

--- a/config.yml
+++ b/config.yml
@@ -51,7 +51,7 @@ AllCops:
   # "/tmp" is special and will be converted to the system temporary directory,
   # which is "/tmp" on Unix-like systems, but could be something else on other
   # systems.
-  CacheRootDirectory: /tmp
+  CacheRootDirectory: ~
   # The default cache root directory is /tmp, which on most systems is
   # writable by any system user. This means that it is possible for a
   # malicious user to anticipate the location of Rubocop's cache directory,
