turn on abc complexity

--- a/config/enabled.yml
+++ b/config/enabled.yml
@@ -245,6 +245,14 @@ Style/Encoding:
 
 ######### METRICS #########
 
+Metrics/AbcSize:
+  Description: >-
+                 A calculated magnitude based on number of assignments,
+                 branches, and conditions.
+  Reference: 'http://c2.com/cgi/wiki?AbcMetric'
+  Enabled: true
+  Severity: refactor
+
 ######### PERFORMANCE #########
 
 Performance/Size:
