--- a/config/config.yml
+++ b/config/config.yml
@@ -1,10 +1,14 @@
 # This is the default configuration file. Enabling and disabling is configured
 # in separate files. This file adds all other parameters apart from Enabled.
 
+require: rubocop-rspec
+
 # Common configuration.
 AllCops:
   # Include common Ruby source files.
   Include:
+    - '**/*.rb'
+    - '**/*.rake'
     - '**/*.gemspec'
     - '**/*.rake'
     - '**/config.ru'
