Add SimpleUnless and SimpleModifierConditional cops

--- a/config/enabled.yml
+++ b/config/enabled.yml
@@ -687,3 +687,9 @@ Style/Not:
 
 Style/NegatedUnless:
   Enabled: true
+
+ArcadiaCops/SimpleModifierConditional:
+  Enabled: true
+
+ArcadiaCops/SimpleUnless:
+  Enabled: true
